--- a/src/app/features/landing/landing.component.html
+++ b/src/app/features/landing/landing.component.html
@@ -1,7 +1,8 @@
-<div class="landing-container">
+<div class="landing-container" color="primary">
   <nav class="navbar">
     <img src="/icons/BloodHound-Logo.png" alt="Bloodhound Logo" class="logo" />
-    <button mat-raised-button color="primary" [routerLink]="'/auth/signin'">Sign In</button>
+    <!-- <button mat-raised-button color="primary" [routerLink]="'/auth/signin'">Sign In</button> -->
+     <button [routerLink]="'/auth/signin'">Sign In</button>
   </nav>
 
   <main class="main-content">
