--- a/src/app/features/pages/dashboard/dashboard.component.html
+++ b/src/app/features/pages/dashboard/dashboard.component.html
@@ -15,7 +15,7 @@
         <div class="description">
           Create, edit, delete and assign code rules to any repository.
         </div>
-        <button mat-button color="primary">Manage</button>
+        <button >Manage</button>
       </div>
     </mat-card>
 
@@ -25,7 +25,7 @@
         <div class="description">
           Connect as many repositories as you want.
         </div>
-        <button mat-button color="primary">Connect</button>
+        <button >Connect</button>
       </div>
     </mat-card>
   </section>
