--- a/src/app/features/pages/repositories/repositories.component.html
+++ b/src/app/features/pages/repositories/repositories.component.html
@@ -1,7 +1,7 @@
 <section class="repositories-wrapper">
   <div class="header">
     <h2>Repositories</h2>
-    <button class="pick-button">Pick a repository</button>
+    <!-- <button class="pick-button">Pick a repository</button> -->
   </div>
 
   <div class="repo-card"
