--- a/src/app/features/pages/repositories/repositories.component.scss
+++ b/src/app/features/pages/repositories/repositories.component.scss
@@ -1,7 +1,7 @@
 .repositories-wrapper {
   padding: 2rem;
-  color: white;
-  background-color: #0f0f0f;
+  color: var(--color-text); // antes: white
+  background-color: var(--background); // antes: #121212
   min-height: 100vh;
 
   .header {
@@ -17,7 +17,7 @@
 
     .pick-button {
       background-color: #3a6ea5;
-      color: white;
+      color: var(--color-text); // antes: white
       padding: 0.5rem 1rem;
       border-radius: 0.375rem;
       font-size: 0.875rem;
@@ -31,7 +31,7 @@
   }
 
   .repo-card {
-    background-color: #181818;
+    background-color: var(--background);
     border: 1px solid #2a2a2a;
     border-radius: 0.5rem;
     padding: 1rem 1.25rem;
@@ -49,6 +49,7 @@
         width: 40px;
         height: 40px;
         border-radius: 9999px;
+        background-color: #2a2a2a;
       }
 
       .text {
@@ -66,7 +67,7 @@
 
     .settings-button {
       background: none;
-      color: #9ca3af;
+      color: var(--color-text); // antes: white
       font-size: 0.875rem;
       border: none;
       cursor: pointer;
