--- a/src/app/features/pages/create-edit-rule/create-edit-rule.component.html
+++ b/src/app/features/pages/create-edit-rule/create-edit-rule.component.html
@@ -14,7 +14,7 @@
         </textarea>
       </mat-form-field>
 
-      <button mat-raised-button color="primary" type="submit">
+      <button type="submit">
         {{ isEditMode ? 'Save' : 'Create' }}
       </button>
 
