--- a/src/app/features/pages/create-edit-rule/create-edit-rule.component.scss
+++ b/src/app/features/pages/create-edit-rule/create-edit-rule.component.scss
@@ -2,7 +2,7 @@
   padding: 32px;
   display: flex;
   flex-direction: column;
-  color: white;
+  color: var(--color-text); // antes: white
 }
 
 h2 {
