--- a/src/app/features/pages/layouts/main-layout/main-layout.component.scss
+++ b/src/app/features/pages/layouts/main-layout/main-layout.component.scss
@@ -1,13 +1,13 @@
 .layout {
   display: flex;
   height: 100vh;
-  background-color: #121212;
-  color: white;
+  background-color: var(--background); // antes: #121212
+  color: var(--color-text); // antes: white
 }
 
 .sidebar {
   width: 250px;
-  background-color: #1c1c1c;
+  background-color: var(--surface); // antes: #1c1c1c
   padding: 1rem;
 }
 
