--- a/src/app/features/pages/rules-list/rules-list.component.scss
+++ b/src/app/features/pages/rules-list/rules-list.component.scss
@@ -17,7 +17,8 @@
 
   table {
     width: 100%;
-    color: white;
+    // color: white;
+    background-color: var(--background);
   }
 }
 
@@ -47,12 +48,19 @@
   }
 }
 
+.custom-header-cell {
+  color: var(--color-text);
+  font-weight: bold;
+  font-size: 14px;
+}
+
 .rule-row {
   cursor: pointer;
   transition: background-color 0.2s ease-in-out;
 
   &:hover {
-    background-color: #2a2a2a;
+    background-color:  #0068e01f;
   }
-}
 
+  color: var(--color-text); // antes: white
+}
