--- a/src/app/features/shared/components/sidebar-navigation/sidebar-navigation.component.html
+++ b/src/app/features/shared/components/sidebar-navigation/sidebar-navigation.component.html
@@ -19,10 +19,10 @@
   </nav>
 
   <div class="account-section">
-    <a [routerLink]="'/account/settings'" routerLinkActive="active">
+    <!-- <a [routerLink]="'/account/settings'" routerLinkActive="active">
       <mat-icon>settings</mat-icon>
       Settings
-    </a>
+    </a> -->
 
     <button mat-button color="warn" class="signout-btn" (click)="logout()">
       <mat-icon>logout</mat-icon>
